--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 KOVAN_PRIVATE_KEY=<Private_key_here>
 KOVAN_URI=<URI_here>
-KOVAN_MNEMONIC=<Mnemonic_here>
 MAINNET_PRIVATE_KEY=<Private_key_here>
 MAINNET_URI=<URI_here>
-MAINNET_MNEMONIC=<Mnemonic_here>
 ETHERSCAN_API_KEY=<Etherscan_api_key_here>
 ALCHEMY_API_KEY=<Alchemy_api_key_here>
+TENDERLY_ACCESS_KEY=<Access_Key_here>
+TENDERLY_PROJECT=<Project_name_here>
+TENDERLY_USERNAME=<Username_here>
+TENDERLY_FORK_ID=<Fork_ID_here>
+TENDERLY_HEAD_ID=<Fork_Head_ID_here>
