--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "npx hardhat clean",
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
+    "coverage": "npx hardhat coverage --network hardhat --solcoverjs .solcover.js",
     "tenderly-fork": "npx hardhat run --network tenderly scripts/tenderly_scripts/tenderly_create_fork.ts",
     "tenderly-balance": "npx hardhat run --network tenderly scripts/tenderly_scripts/tenderly_balance.ts",
     "tenderly-deploy": "npx hardhat run --network tenderly scripts/deploy/deploy_tenderly.ts",
