Config for multichains

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ TENDERLY_PROJECT=<Project_name_here>
 TENDERLY_USERNAME=<Username_here>
 TENDERLY_FORK_ID=<Fork_ID_here>
 TENDERLY_HEAD_ID=<Fork_Head_ID_here>
+POLYGON_ALCHEMY_API_KEY=<Alchemy_api_key_here>
+OPTIMISM_ALCHEMY_API_KEY=<Alchemy_api_key_here>
+ARBITRUM_ALCHEMY_API_KEY=<Alchemy_api_key_here>
