--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "tenderly-balance": "npx hardhat run --network tenderly scripts/tenderly_scripts/tenderly_balance.ts",
     "tenderly-deploy": "npx hardhat run --network tenderly scripts/deploy/deploy_tenderly.ts",
     "deploy": "npx hardhat run --network mainnet",
-    "test-polygon": "CHAINID=137 npx hardhat test"
+    "test-polygon": "CHAINID=137 npx hardhat test",
+    "test-avax": "CHAINID=43114 npx hardhat test",
+    "test-fantom": "CHAINID=250 npx hardhat test",
+    "test-arbitrum": "CHAINID=42161 npx hardhat test",
+    "test-optimism": "CHAINID=10 npx hardhat test"
   },
   "author": "",
   "license": "MIT",
